--- a/Nizing/employee_section/report/Web.config
+++ b/Nizing/employee_section/report/Web.config
@@ -145,6 +145,15 @@
       </authorization>
     </system.web>
   </location>
+  <location path="HR07.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="NIZING\管理部"/>
+        <allow users="NIZING\mis"/>
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
   <system.web>
     <customErrors mode="Off"/>
   </system.web>
