--- a/Nizing/packages.config
+++ b/Nizing/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AjaxControlToolkit" version="15.1.2.0" targetFramework="net40" />
   <package id="bootstrap" version="3.3.7" targetFramework="net40" />
+  <package id="Bootstrap.Datepicker" version="1.6.4" targetFramework="net40" />
   <package id="jQuery" version="2.1.4" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.15.1" targetFramework="net40" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net40" />
