--- a/Intranet/nizing_intranet/Web.config
+++ b/Intranet/nizing_intranet/Web.config
@@ -154,6 +154,15 @@
       </authorization>
     </system.web>
   </location>
+  <location path="ACC01.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="NIZING\管理部, NIZING\會計部"/>
+        <allow users="NIZING\mis"/>
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
   <system.web>
     <customErrors mode="Off"/>
   </system.web>
