--- a/Intranet/nizing_intranet/Web.config
+++ b/Intranet/nizing_intranet/Web.config
@@ -154,6 +154,7 @@
       </authorization>
     </system.web>
   </location>
+  <!--會計部-->
   <location path="ACC01.aspx">
     <system.web>
       <authorization>
