--- a/Intranet/packages.config
+++ b/Intranet/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AjaxControlToolkit" version="17.1.0.0" targetFramework="net40" />
   <package id="bootstrap" version="3.3.7" targetFramework="net40" />
   <package id="jQuery" version="2.1.4" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.12.0" targetFramework="net40" />
