hr08 部門請假表完成

--- a/Intranet/nizing_intranet/Web.config
+++ b/Intranet/nizing_intranet/Web.config
@@ -154,6 +154,15 @@
       </authorization>
     </system.web>
   </location>
+  <location path="HR08.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="NIZING\管理部, NIZING\人事部"/>
+        <allow users="NIZING\mis"/>
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
   <!--會計部-->
   <location path="ACC01.aspx">
     <system.web>
