bug fix on reports

--- a/Nizing/Web.config
+++ b/Nizing/Web.config
@@ -30,4 +30,7 @@
   <system.web>
     <customErrors mode="Off"/>
   </system.web>
+  <system.web>
+    <sessionState timeout="60"/>
+  </system.web>
 </configuration>
