--- a/Intranet/packages.config
+++ b/Intranet/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AjaxControlToolkit" version="17.1.0.0" targetFramework="net40" />
   <package id="bootstrap" version="3.3.7" targetFramework="net40" />
+  <package id="Bootstrap.Datepicker" version="1.6.4" targetFramework="net40" />
   <package id="jQuery" version="2.1.4" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.12.0" targetFramework="net40" />
   <package id="wkhtmltopdf.msvc.64.exe" version="0.12.2.5" targetFramework="net40" />
