--- a/Nizing/employee_section/report/Web.config
+++ b/Nizing/employee_section/report/Web.config
@@ -121,7 +121,7 @@
   <location path="HR04.aspx">
     <system.web>
       <authorization>
-        <allow roles="NIZING\管理部"/>
+        <allow roles="NIZING\管理部, NIZING\人事部"/>
         <allow users="NIZING\mis"/>
         <deny users="*"/>
       </authorization>
