change back to windows application

--- a/WinFormApp/WinFormAppDev/NIZING_BACKEND_Data_Config/NIZING_BACKEND_Data_Config.csproj
+++ b/WinFormApp/WinFormAppDev/NIZING_BACKEND_Data_Config/NIZING_BACKEND_Data_Config.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{6D151A62-F63D-4099-9C4F-82A80B6BA915}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>OQS_Data_Config</RootNamespace>
     <AssemblyName>OQS_Data_Config</AssemblyName>
@@ -61,6 +61,9 @@
   </PropertyGroup>
   <PropertyGroup>
     <SignManifests>true</SignManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
