--- a/WinFormApp/WinFormAppDev/NIZING_BACKEND_Data_Config/App.config
+++ b/WinFormApp/WinFormAppDev/NIZING_BACKEND_Data_Config/App.config
@@ -9,6 +9,9 @@
         <add name="OQS_Data_Config.Properties.Settings.NZConnectionString"
             connectionString="Data Source=SMARTERP;Initial Catalog=NZ;Persist Security Info=True;User ID=everyone;Password=123456"
             providerName="System.Data.SqlClient" />
+        <add name="OQS_Data_Config.Properties.Settings.NZ_ERP2ConnectionString"
+            connectionString="Data Source=SMARTERP;Initial Catalog=NZ_ERP2;Persist Security Info=True;User ID=everyone;Password=123456"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
