--- a/WinFormApp/WinFormAppDev/NIZING_BACKEND_Data_Config/Properties/Settings.settings
+++ b/WinFormApp/WinFormAppDev/NIZING_BACKEND_Data_Config/Properties/Settings.settings
@@ -18,5 +18,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=SMARTERP;Initial Catalog=NZ;Persist Security Info=True;User ID=everyone;Password=123456</Value>
     </Setting>
+    <Setting Name="NZ_ERP2ConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=SMARTERP;Initial Catalog=NZ_ERP2;Persist Security Info=True;User ID=everyone;Password=123456&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=SMARTERP;Initial Catalog=NZ_ERP2;Persist Security Info=True;User ID=everyone;Password=123456</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
