--- a/WinFormApp/WinFormAppDev/NIZING_BACKEND_Data_Config/NIZING_BACKEND_Data_Config.csproj
+++ b/WinFormApp/WinFormAppDev/NIZING_BACKEND_Data_Config/NIZING_BACKEND_Data_Config.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{6D151A62-F63D-4099-9C4F-82A80B6BA915}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OQS_Data_Config</RootNamespace>
-    <AssemblyName>OQS_Data_Config</AssemblyName>
+    <RootNamespace>NIZING_BACKEND_Data_Config</RootNamespace>
+    <AssemblyName>NIZING_BACKEND_Data_Config</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
@@ -97,11 +97,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>dsProductInfo.xsd</DependentUpon>
     </Compile>
-    <Compile Include="frmAccountSearch.cs">
+    <Compile Include="frmOQS_AccountSearch.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmAccountSearch.Designer.cs">
-      <DependentUpon>frmAccountSearch.cs</DependentUpon>
+    <Compile Include="frmOQS_AccountSearch.Designer.cs">
+      <DependentUpon>frmOQS_AccountSearch.cs</DependentUpon>
     </Compile>
     <Compile Include="frmLogin.cs">
       <SubType>Form</SubType>
@@ -109,22 +109,22 @@
     <Compile Include="frmLogin.Designer.cs">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmMain.cs">
+    <Compile Include="frmOQS_Main.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmMain.Designer.cs">
-      <DependentUpon>frmMain.cs</DependentUpon>
+    <Compile Include="frmOQS_Main.Designer.cs">
+      <DependentUpon>frmOQS_Main.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="frmAccountSearch.resx">
-      <DependentUpon>frmAccountSearch.cs</DependentUpon>
+    <EmbeddedResource Include="frmOQS_AccountSearch.resx">
+      <DependentUpon>frmOQS_AccountSearch.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmMain.resx">
-      <DependentUpon>frmMain.cs</DependentUpon>
+    <EmbeddedResource Include="frmOQS_Main.resx">
+      <DependentUpon>frmOQS_Main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -134,6 +134,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="dsBackendLoginAccount.xsc">
       <DependentUpon>dsBackendLoginAccount.xsd</DependentUpon>
