--- a/Intranet/packages.config
+++ b/Intranet/packages.config
@@ -5,5 +5,6 @@
   <package id="Bootstrap.Datepicker" version="1.6.4" targetFramework="net40" />
   <package id="jQuery" version="2.1.4" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.12.0" targetFramework="net40" />
+  <package id="StyleCop" version="4.7.55" targetFramework="net40" />
   <package id="wkhtmltopdf.msvc.64.exe" version="0.12.2.5" targetFramework="net40" />
 </packages>
