--- a/Nizing/employee_section/report/Web.config
+++ b/Nizing/employee_section/report/Web.config
@@ -39,7 +39,7 @@
     <system.web>
       <authorization>
         <allow roles="NIZING\業務部, NIZING\管理部"/>
-        <allow users="NIZING\mis, NIZING\chun, NIZING\yoshida, NIZING\doris"/>
+        <allow users="NIZING\mis, NIZING\chun, NIZING\yoshida, NIZING\doris, NIZING\allylin"/>
         <deny users="*"/>
       </authorization>
     </system.web>
