--- a/Nizing/packages.config
+++ b/Nizing/packages.config
@@ -6,4 +6,5 @@
   <package id="jQuery" version="2.1.4" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.15.1" targetFramework="net40" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net40" />
+  <package id="StyleCop" version="4.7.55" targetFramework="net40" />
 </packages>
