--- a/WinFormApp/WinFormAppDev/NIZING_BACKEND_Data_Config/NIZING_BACKEND_Data_Config.csproj
+++ b/WinFormApp/WinFormAppDev/NIZING_BACKEND_Data_Config/NIZING_BACKEND_Data_Config.csproj
@@ -103,6 +103,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>dsOQS_ProductInfo.xsd</DependentUpon>
     </Compile>
+    <Compile Include="frmAPA_Main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAPA_Main.Designer.cs">
+      <DependentUpon>frmAPA_Main.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmBackend_AccountSearch.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -135,6 +141,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmAPA_Main.resx">
+      <DependentUpon>frmAPA_Main.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmBackend_AccountSearch.resx">
       <DependentUpon>frmBackend_AccountSearch.cs</DependentUpon>
     </EmbeddedResource>
