--- a/Nizing/employee_section/report/Web.config
+++ b/Nizing/employee_section/report/Web.config
@@ -38,8 +38,8 @@
   <location path="NetSale.aspx">
     <system.web>
       <authorization>
-        <allow roles="NIZING\業務部, NIZING\管理部"/>
-        <allow users="NIZING\mis, NIZING\chun, NIZING\yoshida, NIZING\doris, NIZING\allylin"/>
+        <allow roles="NIZING\業務部, NIZING\管理部, NIZING\人事部"/>
+        <allow users="NIZING\mis, NIZING\chun, NIZING\yoshida"/>
         <deny users="*"/>
       </authorization>
     </system.web>
