--- a/Nizing/employee_section/report/Web.config
+++ b/Nizing/employee_section/report/Web.config
@@ -154,6 +154,15 @@
       </authorization>
     </system.web>
   </location>
+  <location path="HR09.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="NIZING\管理部"/>
+        <allow users="NIZING\mis, NIZING\aris, NIZING\chun, NIZING\ehwa, NIZING\yoshida, NIZING\ja0609, NIZING\sandy, NIZING\abbiechen"/>
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
   <system.web>
     <customErrors mode="Off"/>
   </system.web>
