--- a/Nizing/Web.config
+++ b/Nizing/Web.config
@@ -26,6 +26,14 @@
       </authorization>
     </system.web>
   </location>
+  <location path="neo_employee_section">
+    <system.web>
+      <authorization>
+        <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven"/>
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
     <httpRuntime />
