--- a/WinFormApp/WinFormAppDev/NIZING_BACKEND_Data_Config/NIZING_BACKEND_Data_Config.csproj
+++ b/WinFormApp/WinFormAppDev/NIZING_BACKEND_Data_Config/NIZING_BACKEND_Data_Config.csproj
@@ -130,6 +130,12 @@
     <Compile Include="frmBackend_Main.Designer.cs">
       <DependentUpon>frmBackend_Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmHR360_AccountSearch.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmHR360_AccountSearch.Designer.cs">
+      <DependentUpon>frmHR360_AccountSearch.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmHR360_Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -164,6 +170,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmBackend_Main.resx">
       <DependentUpon>frmBackend_Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmHR360_AccountSearch.resx">
+      <DependentUpon>frmHR360_AccountSearch.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmHR360_Main.resx">
       <DependentUpon>frmHR360_Main.cs</DependentUpon>
