update connection string name

--- a/WinFormApp/WinFormAppDev/NIZING_BACKEND_Data_Config/App.config
+++ b/WinFormApp/WinFormAppDev/NIZING_BACKEND_Data_Config/App.config
@@ -3,13 +3,13 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="OQS_Data_Config.Properties.Settings.OQSConnectionString"
+        <add name="OQSConnectionString"
             connectionString="Data Source=SMARTERP;Initial Catalog=OQS;Persist Security Info=True;User ID=everyone;Password=123456;MultipleActiveResultSets=True"
             providerName="System.Data.SqlClient" />
-        <add name="OQS_Data_Config.Properties.Settings.NZConnectionString"
+        <add name="NZConnectionString"
             connectionString="Data Source=SMARTERP;Initial Catalog=NZ;Persist Security Info=True;User ID=everyone;Password=123456;MultipleActiveResultSets=True"
             providerName="System.Data.SqlClient" />
-        <add name="OQS_Data_Config.Properties.Settings.NZ_ERP2ConnectionString"
+        <add name="ERP2ConnectionString"
             connectionString="Data Source=SMARTERP;Initial Catalog=NZ_ERP2;Persist Security Info=True;User ID=everyone;Password=123456;MultipleActiveResultSets=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
