--- a/Intranet/nizing_intranet/Web.config
+++ b/Intranet/nizing_intranet/Web.config
@@ -158,7 +158,7 @@
     <system.web>
       <authorization>
         <allow roles="NIZING\管理部"/>
-        <allow users="NIZING\mis, NIZING\aris, NIZING\chun, NIZING\ehwa, NIZING\yoshida, NIZING\ja0609, NIZING\sandy, NIZING\abbiechen"/>
+        <allow users="NIZING\mis, NIZING\aris, NIZING\chun, NIZING\ehwa, NIZING\yoshida, NIZING\sandy, NIZING\abbiechen"/>
         <deny users="*"/>
       </authorization>
     </system.web>
