--- a/Nizing/employee_section/report/Web.config
+++ b/Nizing/employee_section/report/Web.config
@@ -48,7 +48,7 @@
     <system.web>
       <authorization>
         <allow roles="NIZING\業務部, NIZING\管理部"/>
-        <allow users="NIZING\mis, NIZING\chun"/>
+        <allow users="NIZING\mis, NIZING\chun, NIZING\yoshida"/>
         <deny users="*"/>
       </authorization>
     </system.web>
