--- a/Intranet/Web.config
+++ b/Intranet/Web.config
@@ -19,6 +19,7 @@
     <add name="NZConnectionString2" connectionString="Data Source=SMARTERP;Initial Catalog=NZ;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient" />
     <add name="HR360ConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=NZ_ERP2;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient" />
     <add name="ERP2ConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=NZ_ERP2;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient" />
+    <add name="StoneaxConnectionString" connectionString="Data Source=STONEAX;Initial Catalog=StoneaxAccessControlWeb;Persist Security Info=True;User ID=everyone;password=123456" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <httpHandlers>
