update access priviledge for HR06

--- a/Intranet/nizing_intranet/Web.config
+++ b/Intranet/nizing_intranet/Web.config
@@ -139,7 +139,7 @@
   <location path="HR06.aspx">
     <system.web>
       <authorization>
-        <allow roles="NIZING\管理部"/>
+        <allow roles="NIZING\管理部, NIZING\人事部"/>
         <allow users="NIZING\mis, NIZING\yoshida"/>
         <deny users="*"/>
       </authorization>
