--- a/Intranet/nizing_intranet/Web.config
+++ b/Intranet/nizing_intranet/Web.config
@@ -140,7 +140,7 @@
     <system.web>
       <authorization>
         <allow roles="NIZING\管理部, NIZING\人事部"/>
-        <allow users="NIZING\mis, NIZING\yoshida"/>
+        <allow users="NIZING\mis, NIZING\yoshida,NIZING\chun"/>
         <deny users="*"/>
       </authorization>
     </system.web>
