--- a/Intranet/nizing_intranet/Web.config
+++ b/Intranet/nizing_intranet/Web.config
@@ -33,7 +33,15 @@
         <allow users="NIZING\mis"/>
       </authorization>
     </system.web>
-  </location>  
+  </location>
+  <location path="M02.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="NIZING\管理部, NIZING\生管處"/>
+        <allow users="NIZING\mis"/>
+      </authorization>
+    </system.web>
+  </location>
   <!--業務部-->
   <location path="NetSale.aspx">
     <system.web>
