--- a/Intranet/nizing_intranet/Web.config
+++ b/Intranet/nizing_intranet/Web.config
@@ -182,6 +182,8 @@
     </system.web>
   </location>
   <system.web>
+    <compilation debug="true"></compilation>
     <customErrors mode="Off"/>
-  </system.web>
+    
+  </system.web>  
 </configuration>
