--- a/Nizing/Web.config
+++ b/Nizing/Web.config
@@ -34,6 +34,15 @@
       </authorization>
     </system.web>
   </location>
+  <location path="oqs">
+    <system.web>
+      <authorization>
+        <allow roles="NIZING\Domain Users"/>
+        <!--<allow users="NIZING\kevin, NIZING\chrissy"/>-->
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
   <system.web>
     <compilation debug="true" targetFramework="4.0"/>
     <httpRuntime/>
