--- a/Intranet/nizing_intranet/Web.config
+++ b/Intranet/nizing_intranet/Web.config
@@ -25,6 +25,14 @@
       </authorization>
     </system.web>
   </location>
+  <location path="PC04.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="NIZING\管理部, NIZING\生管處"/>
+        <allow users="NIZING\mis"/>
+      </authorization>
+    </system.web>
+  </location>
   <!--製造中心-->
   <location path="ProductionEfficiencyReport.aspx">
     <system.web>
