--- a/Nizing/Web.config
+++ b/Nizing/Web.config
@@ -57,4 +57,25 @@
   <system.web>
     <sessionState timeout="60" />
   </system.web>
+  <!--<system.webServer>
+    <rewrite>
+      <rules>
+        <rule name="Fail bad requests">
+          <match url=".*"/>
+          <conditions>
+            <add input="{HTTP_HOST}" pattern="localhost" negate="true" />
+          </conditions>
+          <action type="AbortRequest" />
+        </rule>
+        <rule name="Hide page name" stopProcessing="true">
+          <match url="www.nizing.com.tw[/]([a-zA-Z\d-]+).aspx$" ignoreCase="true" />
+          <action type="Rewrite" url="www.nizing.com.tw" />
+        </rule>
+        <rule name="Hide page name for local host" stopProcessing="true">
+          <match url="localhost:50429/([a-zA-Z\d-]+)" ignoreCase="true" />
+          <action type="Rewrite" url="/{R:1}" />
+        </rule>
+      </rules>
+    </rewrite>
+  </system.webServer>-->
 </configuration>
