added PD02 NetSpending

--- a/Intranet/nizing_intranet/Web.config
+++ b/Intranet/nizing_intranet/Web.config
@@ -105,7 +105,16 @@
         <deny users="*"/>
       </authorization>
     </system.web>
-  </location>  
+  </location>
+  <location path="PD02_NetSpending.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="NIZING\採購部, NIZING\管理部"/>
+        <allow users="NIZING\mis, NIZING\chun"/>
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
   <!--人事部-->
   <location path="SalaryChangeReport.aspx">
     <system.web>
