--- a/WinFormApp/WinFormAppDev/NIZING_BACKEND_Data_Config/NIZING_BACKEND_Data_Config.csproj
+++ b/WinFormApp/WinFormAppDev/NIZING_BACKEND_Data_Config/NIZING_BACKEND_Data_Config.csproj
@@ -24,7 +24,7 @@
     <MapFileExtensions>true</MapFileExtensions>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>15</ApplicationRevision>
+    <ApplicationRevision>17</ApplicationRevision>
     <ApplicationVersion>1.0.1.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -134,6 +134,12 @@
     <Compile Include="frmBackend_Main.Designer.cs">
       <DependentUpon>frmBackend_Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmDPR_Main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDPR_Main.Designer.cs">
+      <DependentUpon>frmDPR_Main.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmHR360_AccountSearch.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -180,6 +186,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmBackend_Main.resx">
       <DependentUpon>frmBackend_Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDPR_Main.resx">
+      <DependentUpon>frmDPR_Main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmHR360_AccountSearch.resx">
       <DependentUpon>frmHR360_AccountSearch.cs</DependentUpon>
@@ -287,6 +296,12 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\usercontrolLib\nizingBackendUserControlLib\nizingBackendUserControlLib\nizingBackendUserControlLib.csproj">
+      <Project>{98c88549-3a27-499e-8d69-a9e6869a32f6}</Project>
+      <Name>nizingBackendUserControlLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
