added user permission

--- a/Intranet/nizing_intranet/Web.config
+++ b/Intranet/nizing_intranet/Web.config
@@ -95,6 +95,15 @@
         <deny users="*"/>
       </authorization>
     </system.web>
+  </location>  
+  <location path="quotaion-list.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="NIZING\業務部, NIZING\管理部"/>
+        <allow users="NIZING\mis, NIZING\chun, NIZING\yoshida"/>
+        <deny users="*"/>
+      </authorization>
+    </system.web>
   </location>
   <!--採購部-->
   <location path="PurchaseReport.aspx">
