--- a/Intranet/nizing_intranet/Web.config
+++ b/Intranet/nizing_intranet/Web.config
@@ -55,7 +55,7 @@
     <system.web>
       <authorization>
         <allow roles="NIZING\業務部, NIZING\管理部, NIZING\人事部"/>
-        <allow users="NIZING\mis, NIZING\chun, NIZING\yoshida"/>
+        <allow users="NIZING\mis, NIZING\chun"/>
         <deny users="*"/>
       </authorization>
     </system.web>
