--- a/Nizing/employee_section/report/Web.config
+++ b/Nizing/employee_section/report/Web.config
@@ -43,6 +43,15 @@
     </system.web>
   </location>
   <!--業務部-->
+  <location path="quotation-list.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="NIZING\業務部, NIZING\管理部"/>
+        <allow users="NIZING\mis, NIZING\chun"/>
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
   <location path="NetSale.aspx">
     <system.web>
       <authorization>
