--- a/Intranet/nizing_intranet/Web.config
+++ b/Intranet/nizing_intranet/Web.config
@@ -124,6 +124,15 @@
       </authorization>
     </system.web>
   </location>
+  <location path="PD03_RawMatsUsage.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="NIZING\採購部, NIZING\管理部"/>
+        <allow users="NIZING\mis, NIZING\chun"/>
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
   <!--人事部-->
   <location path="SalaryChangeReport.aspx">
     <system.web>
