--- a/Nizing/Web.config
+++ b/Nizing/Web.config
@@ -43,14 +43,25 @@
       </authorization>
     </system.web>
   </location>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.7.2" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.0"/>
-    <httpRuntime/>
+    <compilation debug="true" targetFramework="4.7.2"/>
+    <!--<httpRuntime/>-->
     <pages controlRenderingCompatibilityVersion="4.0">
       <controls>
         <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit"/>
       </controls>
     </pages>
+    <!--<httpRuntime executionTimeout="28800" maxRequestLength="4096" useFullyQualifiedRedirectUrl="false"
+minFreeThreads="8" minLocalRequestFreeThreads="4" appRequestQueueLimit="100" />-->
+    <!--<customErrors mode="Off"/>-->
     <customErrors mode="RemoteOnly" defaultRedirect="/ErrorPage.aspx"/>
     <sessionState timeout="60"/>
   </system.web>
