--- a/Nizing/Web.config
+++ b/Nizing/Web.config
@@ -37,7 +37,7 @@
   <location path="sunrise_employee_section">
     <system.web>
       <authorization>
-        <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven, USER\mandy.lo"/>
+        <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven"/>
         <deny users="*"/>
       </authorization>
     </system.web>
