--- a/Intranet/Web.config
+++ b/Intranet/Web.config
@@ -52,4 +52,23 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>-->
+
+  <location path="nizing_intranet">
+    <system.web>
+      <authorization>
+        <allow roles="NIZING\Domain Users"/>
+        <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
+        <deny users="*, NIZING\casper"/>
+      </authorization>
+    </system.web>
+  </location>
+
+  <location path="sunrise-default.aspx">
+    <system.web>
+      <authorization>
+        <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven, NIZING\casper"/>
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
 </configuration>
