--- a/Nizing/Web.config
+++ b/Nizing/Web.config
@@ -14,7 +14,7 @@
       <authorization>
         <allow roles="NIZING\Domain Users"/>
         <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
-        <deny users="*"/>
+        <deny users="*, NIZING\casper"/>
       </authorization>
     </system.web>
   </location>
