--- a/Intranet/Web.config
+++ b/Intranet/Web.config
@@ -66,7 +66,7 @@
   <location path="sunrise-default.aspx">
     <system.web>
       <authorization>
-        <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven, NIZING\casper"/>
+        <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven, NIZING\casper, NIZING\mandy.lo"/>
         <deny users="*"/>
       </authorization>
     </system.web>
