--- a/Nizing/Web.config
+++ b/Nizing/Web.config
@@ -51,7 +51,7 @@
   <location path="sunrise_employee_section">
     <system.web>
       <authorization>
-        <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven, NIZING\casper"/>
+        <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven, NIZING\casper, NIZING\mandy.lo"/>
         <deny users="*"/>
       </authorization>
     </system.web>
