--- a/Nizing/packages.config
+++ b/Nizing/packages.config
@@ -9,4 +9,5 @@
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.6" targetFramework="net40" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
   <package id="Svg" version="3.0.102" targetFramework="net472" />
+  <package id="ZXing.Net.Mobile" version="2.4.1" targetFramework="net472" />
 </packages>
