--- a/Intranet/Web.config
+++ b/Intranet/Web.config
@@ -56,9 +56,10 @@
   <location path="nizing_intranet">
     <system.web>
       <authorization>
+        <deny users="Nizing\casper"/>
         <allow roles="NIZING\Domain Users"/>
         <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
-        <deny users="*, NIZING\casper"/>
+        <deny users="*"/>
       </authorization>
     </system.web>
   </location>
