--- a/Nizing/Web.config
+++ b/Nizing/Web.config
@@ -26,9 +26,10 @@
   <location path="employee_section">
     <system.web>
       <authorization>
+        <deny users="NIZING\casper"/>
         <allow roles="NIZING\Domain Users"/>
         <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
-        <deny users="*, NIZING\casper"/>
+        <deny users="*"/>
       </authorization>
     </system.web>
   </location>
