--- a/Intranet/sunrise_intranet/Web.config
+++ b/Intranet/sunrise_intranet/Web.config
@@ -4,7 +4,7 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  <appSettings>
+  <!--<appSettings>
     <add key="ChartImageHandler" value="storage=file;timeout=20;url=~\employee_section\tempImage\;" />
   </appSettings>
   <system.webServer>
@@ -14,7 +14,7 @@
       <add name="ChartImageHandler" preCondition="integratedMode" verb="GET,HEAD,POST"
         path="ChartImg.axd" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     </handlers>
-  </system.webServer>
+  </system.webServer>-->
   <connectionStrings>
     <add name="NZConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=NZ;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
     <!--<add name="NZConnectionString2" connectionString="Data Source=SMARTERP;Initial Catalog=NZ;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>-->
