--- a/Nizing/Web.config
+++ b/Nizing/Web.config
@@ -85,7 +85,7 @@
     <!--<httpRuntime executionTimeout="28800" maxRequestLength="4096" useFullyQualifiedRedirectUrl="false"
 minFreeThreads="8" minLocalRequestFreeThreads="4" appRequestQueueLimit="100" />-->
     <!--<customErrors mode="Off"/>-->
-    <customErrors mode="RemoteOnly" defaultRedirect="/ErrorPage.aspx"/>
+    <customErrors mode="Off" defaultRedirect="/ErrorPage.aspx"/>
     <sessionState timeout="60"/>
   </system.web>
   <!--<system.webServer>
