--- a/Nizing/Web.config
+++ b/Nizing/Web.config
@@ -9,7 +9,7 @@
     <add name="NZConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=NZ;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
     <add name="ERP2ConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=NZ_ERP2;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
   </connectionStrings>
-  <system.webServer>
+  <!--<system.webServer>
     <handlers>
       <remove name="WebDAV"/>
     </handlers>
@@ -20,7 +20,7 @@
         <add name="Access-Control-Allow-Headers" value="*"/>
       </customHeaders>
     </httpProtocol>
-  </system.webServer>
+  </system.webServer>-->
   <location path="employee_section">
     <system.web>
       <authorization>
