--- a/Nizing/Web.config
+++ b/Nizing/Web.config
@@ -50,7 +50,7 @@
   <location path="sunrise_employee_section">
     <system.web>
       <authorization>
-        <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven, NIZING\casper, NIZING\mandy.lo"/>
+        <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven, NIZING\casper, NIZING\mandy.lo, NIZING\carina.liu, NIZING\dakai"/>
         <deny users="*"/>
       </authorization>
     </system.web>
