--- a/Intranet/sunrise_intranet/Web.config
+++ b/Intranet/sunrise_intranet/Web.config
@@ -46,4 +46,54 @@
   <system.web>
     <!--<customErrors mode="Off"/>-->
   </system.web>
+  <location path="PD_PurchaseInProgress.aspx">
+    <system.web>
+      <authorization>
+        <deny users="NIZING\dakai"/>
+        <allow roles="NIZING\Domain Users"/>
+        <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+  <location path="SD_PastCostsAndPrices.aspx">
+    <system.web>
+      <authorization>
+        <deny users="NIZING\dakai"/>
+        <allow roles="NIZING\Domain Users"/>
+        <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+  <location path="SD01.aspx">
+    <system.web>
+      <authorization>
+        <deny users="NIZING\dakai"/>
+        <allow roles="NIZING\Domain Users"/>
+        <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+  <location path="SD03_OrderInProgress.aspx">
+    <system.web>
+      <authorization>
+        <deny users="NIZING\dakai"/>
+        <allow roles="NIZING\Domain Users"/>
+        <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+  <location path="PD_PurchaseCostCalculator.aspx">
+    <system.web>
+      <authorization>
+        <deny users="NIZING\dakai"/>
+        <allow roles="NIZING\Domain Users"/>
+        <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
 </configuration>
